Renamed Tracks to Trackers

--- a/client/views/cover/cover.html
+++ b/client/views/cover/cover.html
@@ -9,7 +9,7 @@
         {{#each allTracks}}
         <div class="row">
              <div class="col-md-12">
-                 {{>singleTrack}}
+                 {{>singleTracker}}
             </div>
         </div>
         {{/each}}
