Added connection to server method

--- a/client/views/addTracker/addTracker.html
+++ b/client/views/addTracker/addTracker.html
@@ -10,19 +10,19 @@
 
                     <div class="radio">
                         <label>
-                            <input type="radio" name="period" id="day" value="day" checked>
+                            <input type="radio" name="period" id="day" value="day" >
                             Day
                         </label>
                     </div>
                     <div class="radio">
                         <label>
-                            <input type="radio" name="period" id="week" value="week" checked>
+                            <input type="radio" name="period" id="week" value="week" >
                             Week
                         </label>
                     </div>
                     <div class="radio">
                         <label>
-                            <input type="radio" name="period" id="month" value="month" checked>
+                            <input type="radio" name="period" id="month" value="month" >
                             Month
                         </label>
                     </div>
