A tracker now shows up on the cover page

--- a/client/styles/tracker.less
+++ b/client/styles/tracker.less
@@ -1,5 +1,10 @@
 .singleDay{
+  position: relative;
+  display: inline-block;
   height: 30px;
   width: 30px;
   border: black solid 3px;
+}
+.singleDay.complete{
+  background-color: blue;
 }
