--- a/client/views/cover/cover.html
+++ b/client/views/cover/cover.html
@@ -6,7 +6,7 @@
                 <h2>Tracker</h2>
             </div>
         </div>
-        {{#each allTracks}}
+        {{#each allTrackers}}
         <div class="row">
              <div class="col-md-12">
                  {{>singleTracker}}
