--- a/client/views/navBar/navBar.html
+++ b/client/views/navBar/navBar.html
@@ -4,7 +4,7 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <a class="navbar-brand" href="#">
-                Packloft
+                Tracker
             </a>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -19,8 +19,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     {{#if currentUser}}
-                    <li><a href="{{pathFor 'listControllers'}}"><span class="glyphicon glyphicon-th-list"></span></a></li>
-                    <li><a href="{{pathFor 'editAccount'}}"><span class="glyphicon glyphicon-user"></span></a></li>
                     <li><a href="#" id="logout">Logout</a></li>
                     {{else}}
                     <li><a href="{{pathFor 'login'}}">Login</a></li>
