--- a/client/views/addTracker/addTracker.html
+++ b/client/views/addTracker/addTracker.html
@@ -1,5 +1,6 @@
 <Template name="addTracker">
     <div class="container">
+        {{>navBar}}
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
                 <form>
@@ -27,7 +28,8 @@
                         </label>
                     </div>
 
-                    <button class="btn btn-success" type="submit">Add Tracker</button>
+                    <a href="{{pathFor 'cover'}}" class="btn btn-danger">Cancel</a>
+                    <button class="btn btn-success" type="submit" id="addTracker">Add Tracker</button>
                 </form>
             </div>
         </div>
