--- a/client/views/cover/cover.html
+++ b/client/views/cover/cover.html
@@ -1,9 +1,9 @@
 <Template name="cover">
-
-    <div class="container-fluid">
+{{>navBar}}
+    <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2>Tracker</h2>
+                <h2>Tracker <span class="pull-right"><a href="{{pathFor 'addTracker'}}"><span class="glyphicon glyphicon-plus"></span></a></span></h2>
             </div>
         </div>
         {{#each allTrackers}}
