--- a/client/views/cover/singleDay/singleDay.html
+++ b/client/views/cover/singleDay/singleDay.html
@@ -1,3 +1,3 @@
 <Template name="singleDay">
-    <span class="singleDay {{goalProgress}} {{color}}"></span>
+    <span class="singleDay {{goalProgress}} {{color}}" title="{{msToDate day}}"></span>
 </Template>
